[package]
name = "cargo-wizard"
version = "0.2.0"
edition = "2021"

description = "Cargo subcommand for applying Cargo profile templates."
repository = "https://github.com/kobzol/cargo-wizard"
authors = ["Jakub Beránek <berykubik@gmail.com>"]
keywords = [
    "cargo",
    "profile",
    "template"
]
categories = ["development-tools::cargo-plugins"]

readme = "README.md"
license = "MIT"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
atty = "0.2.14"
cargo_metadata = "0.18.1"
clap = { version = "4.5.1", features = ["derive"] }
console = { version = "0.15.8", features = ["windows-console-colors"] }
indexmap = "2.2.5"
inquire = "0.7.0"
rustc_version = "0.4.0"
similar = { version = "2.4.0", features = ["inline"] }
thiserror = "1.0.57"
toml_edit = "0.22.6"

[dev-dependencies]
tempfile = "3.10.1"
insta = "1.35.1"
rexpect = "0.5.0"

[profile.dev]
debug = 0
