[package]
name = "cargo-wizard"
version = "0.2.3"
edition = "2024"

description = "Cargo subcommand for applying Cargo profile templates."
repository = "https://github.com/kobzol/cargo-wizard"
authors = ["Jakub Beránek <berykubik@gmail.com>"]
keywords = [
    "cargo",
    "profile",
    "template"
]
categories = ["development-tools::cargo-plugins"]

readme = "README.md"
license = "MIT"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cargo_metadata = "0.23"
clap = { version = "4", features = ["derive"] }
console = { version = "0.16", features = ["windows-console-colors"] }
indexmap = "2"
inquire = "0.9"
rustc_version = "0.4"
similar = { version = "2.4", features = ["inline"] }
thiserror = "2"
toml_edit = "0.23"
which = "8"

[dev-dependencies]
tempfile = "3"
insta = "1"
rustversion = "1"

[target.'cfg(target_os = "linux")'.dev-dependencies]
rexpect = "0.6"

[profile.dev]
debug = 0
